// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AddComponentButton /> displays the name of the dz when the label is empty 1`] = `
.c10 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  padding: 8px;
  border-radius: 4px;
  background: #ffffff;
  border: 1px solid #dcdce4;
  position: relative;
  outline: none;
}

.c1 svg {
  height: 12px;
  width: 12px;
}

.c1 svg > g,
.c1 svg path {
  fill: #ffffff;
}

.c1[aria-disabled='true'] {
  pointer-events: none;
}

.c1:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c1:focus-visible {
  outline: none;
}

.c1:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c4 {
  padding-right: 8px;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c9 {
  font-weight: 600;
  color: #8e8ea9;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c7 {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c7 > circle {
  fill: #eaeaef;
}

.c7 > path {
  fill: #666687;
}

.c2 {
  border-radius: 26px;
  border-color: #eaeaef;
  background: #ffffff;
  padding-top: 12px;
  padding-right: 16px;
  padding-bottom: 12px;
  padding-left: 16px;
  box-shadow: 0px 1px 4px rgba(33,33,52,0.1);
}

.c2 svg {
  height: 24px;
  width: 24px;
}

.c2 svg > path {
  fill: #666687;
}

.c2:hover {
  color: #4945ff !important;
}

.c2:hover .c8 {
  color: #4945ff !important;
}

.c2:hover .c6 > circle {
  fill: #4945ff;
}

.c2:hover .c6 > path {
  fill: #f6f6f9;
}

.c2:active .c8 {
  color: #4945ff;
}

.c2:active .c6 > circle {
  fill: #4945ff;
}

.c2:active .c6 > path {
  fill: #f6f6f9;
}

.c5 {
  height: 100%;
}

<div>
  <div
    class="c0"
  >
    <div
      class=""
      style="cursor: pointer;"
    >
      <button
        aria-disabled="false"
        class="c1 c2"
        type="button"
      >
        <div
          class="c3"
        >
          <div
            aria-hidden="true"
            class="c4 c5"
          >
            <svg
              class="c6 c7"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                fill="#212134"
                r="12"
              />
              <path
                d="M17 12.569c0 .124-.1.224-.225.224h-3.981v3.982c0 .124-.101.225-.226.225h-1.136a.225.225 0 01-.226-.225v-3.981H7.226A.225.225 0 017 12.567v-1.136c0-.125.1-.226.225-.226h3.982V7.226c0-.124.1-.225.224-.225h1.138c.124 0 .224.1.224.225v3.982h3.982c.124 0 .225.1.225.224v1.138z"
                fill="#F6F6F9"
              />
            </svg>
          </div>
          <span
            class="c8 c9"
          >
            Add a component to name
          </span>
        </div>
      </button>
    </div>
  </div>
  <div
    class="c10"
  >
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-log"
      role="log"
    />
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-status"
      role="status"
    />
    <p
      aria-live="assertive"
      aria-relevant="all"
      id="live-region-alert"
      role="alert"
    />
  </div>
</div>
`;

exports[`<AddComponentButton /> renders and matches the snapshot 1`] = `
.c10 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  padding: 8px;
  border-radius: 4px;
  background: #ffffff;
  border: 1px solid #dcdce4;
  position: relative;
  outline: none;
}

.c1 svg {
  height: 12px;
  width: 12px;
}

.c1 svg > g,
.c1 svg path {
  fill: #ffffff;
}

.c1[aria-disabled='true'] {
  pointer-events: none;
}

.c1:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c1:focus-visible {
  outline: none;
}

.c1:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c4 {
  padding-right: 8px;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c9 {
  font-weight: 600;
  color: #8e8ea9;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c7 {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c7 > circle {
  fill: #eaeaef;
}

.c7 > path {
  fill: #666687;
}

.c2 {
  border-radius: 26px;
  border-color: #eaeaef;
  background: #ffffff;
  padding-top: 12px;
  padding-right: 16px;
  padding-bottom: 12px;
  padding-left: 16px;
  box-shadow: 0px 1px 4px rgba(33,33,52,0.1);
}

.c2 svg {
  height: 24px;
  width: 24px;
}

.c2 svg > path {
  fill: #666687;
}

.c2:hover {
  color: #4945ff !important;
}

.c2:hover .c8 {
  color: #4945ff !important;
}

.c2:hover .c6 > circle {
  fill: #4945ff;
}

.c2:hover .c6 > path {
  fill: #f6f6f9;
}

.c2:active .c8 {
  color: #4945ff;
}

.c2:active .c6 > circle {
  fill: #4945ff;
}

.c2:active .c6 > path {
  fill: #f6f6f9;
}

.c5 {
  height: 100%;
}

<div>
  <div
    class="c0"
  >
    <div
      class=""
      style="cursor: pointer;"
    >
      <button
        aria-disabled="false"
        class="c1 c2"
        type="button"
      >
        <div
          class="c3"
        >
          <div
            aria-hidden="true"
            class="c4 c5"
          >
            <svg
              class="c6 c7"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                fill="#212134"
                r="12"
              />
              <path
                d="M17 12.569c0 .124-.1.224-.225.224h-3.981v3.982c0 .124-.101.225-.226.225h-1.136a.225.225 0 01-.226-.225v-3.981H7.226A.225.225 0 017 12.567v-1.136c0-.125.1-.226.225-.226h3.982V7.226c0-.124.1-.225.224-.225h1.138c.124 0 .224.1.224.225v3.982h3.982c.124 0 .225.1.225.224v1.138z"
                fill="#F6F6F9"
              />
            </svg>
          </div>
          <span
            class="c8 c9"
          >
            Add a component to test
          </span>
        </div>
      </button>
    </div>
  </div>
  <div
    class="c10"
  >
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-log"
      role="log"
    />
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-status"
      role="status"
    />
    <p
      aria-live="assertive"
      aria-relevant="all"
      id="live-region-alert"
      role="alert"
    />
  </div>
</div>
`;

exports[`<AddComponentButton /> renders and matches the snapshot when the isOpen prop is truthy 1`] = `
.c10 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  padding: 8px;
  border-radius: 4px;
  background: #ffffff;
  border: 1px solid #dcdce4;
  position: relative;
  outline: none;
}

.c1 svg {
  height: 12px;
  width: 12px;
}

.c1 svg > g,
.c1 svg path {
  fill: #ffffff;
}

.c1[aria-disabled='true'] {
  pointer-events: none;
}

.c1:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c1:focus-visible {
  outline: none;
}

.c1:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c4 {
  padding-right: 8px;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c9 {
  font-weight: 600;
  color: #8e8ea9;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c7 {
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
}

.c7 > circle {
  fill: #eaeaef;
}

.c7 > path {
  fill: #666687;
}

.c2 {
  border-radius: 26px;
  border-color: #eaeaef;
  background: #ffffff;
  padding-top: 12px;
  padding-right: 16px;
  padding-bottom: 12px;
  padding-left: 16px;
  box-shadow: 0px 1px 4px rgba(33,33,52,0.1);
}

.c2 svg {
  height: 24px;
  width: 24px;
}

.c2 svg > path {
  fill: #666687;
}

.c2:hover {
  color: #4945ff !important;
}

.c2:hover .c8 {
  color: #4945ff !important;
}

.c2:hover .c6 > circle {
  fill: #4945ff;
}

.c2:hover .c6 > path {
  fill: #f6f6f9;
}

.c2:active .c8 {
  color: #4945ff;
}

.c2:active .c6 > circle {
  fill: #4945ff;
}

.c2:active .c6 > path {
  fill: #f6f6f9;
}

.c5 {
  height: 100%;
}

<div>
  <div
    class="c0"
  >
    <div
      class=""
      style="cursor: pointer;"
    >
      <button
        aria-disabled="false"
        class="c1 c2"
        type="button"
      >
        <div
          class="c3"
        >
          <div
            aria-hidden="true"
            class="c4 c5"
          >
            <svg
              class="c6 c7"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                fill="#212134"
                r="12"
              />
              <path
                d="M17 12.569c0 .124-.1.224-.225.224h-3.981v3.982c0 .124-.101.225-.226.225h-1.136a.225.225 0 01-.226-.225v-3.981H7.226A.225.225 0 017 12.567v-1.136c0-.125.1-.226.225-.226h3.982V7.226c0-.124.1-.225.224-.225h1.138c.124 0 .224.1.224.225v3.982h3.982c.124 0 .225.1.225.224v1.138z"
                fill="#F6F6F9"
              />
            </svg>
          </div>
          <span
            class="c8 c9"
          >
            Close
          </span>
        </div>
      </button>
    </div>
  </div>
  <div
    class="c10"
  >
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-log"
      role="log"
    />
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-status"
      role="status"
    />
    <p
      aria-live="assertive"
      aria-relevant="all"
      id="live-region-alert"
      role="alert"
    />
  </div>
</div>
`;
